--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         #canvas {
             width: 100%;
             height: 100%;
+
+            touch-action: none;
         }
         .game-over #canvas {
             display: none;
